--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "require": {
         "symfony/console": "~2.7.5"
     },
+    "require-dev": {
+        "symfony/console": "~2.7.5"
+    },
     "license": "LGPL-3.0",
     "autoload": {
         "psr-4": {
