--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "symfony/console": "~2.7.5"
     },
     "require-dev": {
-        "symfony/console": "~2.7.5"
+        "symfony/var-dumper": "~2.7.5"
     },
     "license": "LGPL-3.0",
     "autoload": {
