--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "rudloff/infogreffe-unofficial-api",
     "description": "Unofficial API for infogreffe.fr",
     "require": {
-        "symfony/console": "~2.7.5"
+        "symfony/console": "~2.7.5",
+        "guzzlehttp/guzzle": "~6.1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "~2.7.5"
