--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
-    "name": "rudloff/infogreffe-unofficial-api",
-    "description": "Unofficial API for infogreffe.fr",
-    "require": {
-        "symfony/console": "~3.0.0",
-        "guzzlehttp/guzzle": "~6.2.0"
-    },
-    "require-dev": {
-        "symfony/var-dumper": "~3.0.0",
-        "psr/log": "~1.0.0"
-    },
-    "license": "LGPL-3.0",
-    "autoload": {
-        "psr-4": {
-            "InfogreffeUnofficial\\": "classes/"
-        }
+  "name": "rudloff/infogreffe-unofficial-api",
+  "description": "Unofficial API for infogreffe.fr",
+  "require": {
+    "symfony/console": "~3.0.0",
+    "guzzlehttp/guzzle": "~6.2.0"
+  },
+  "require-dev": {
+    "symfony/var-dumper": "~3.0.0",
+    "psr/log": "~1.0.0",
+    "squizlabs/php_codesniffer": "~2.7.0",
+    "phpunit/phpunit": "~5.6.1"
+  },
+  "license": "LGPL-3.0",
+  "autoload": {
+    "psr-4": {
+      "InfogreffeUnofficial\\": "classes/"
     }
+  }
 }
